Adition of project page link on GitHub to initial version

--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
                     <div id="dev" class="footercontainer">
                         <h5>Developer:</h5>
                         <p>
-                            Page developed by <a href="https://github.com/dark1zinn" target="_blank">dark1zinn</a>
+                            Page developed by <a href="https://github.com/dark1zinn" target="_blank">dark1zinn</a><br>
+                            See the project page at the <a href="https://github.com/dark1zinn/drkdev">GitHub</a>
                         </p>
                     </div>
                 </div>
