Hotfix for footer <div> element out of screnn widht and height

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <h5>Developer:</h5>
                         <p>
                             Page developed by <a href="https://github.com/dark1zinn" target="_blank">dark1zinn</a><br>
-                            See the project page at the <a href="https://github.com/dark1zinn/drkdev">GitHub</a>
+                            See it on <a href="https://github.com/dark1zinn/drkdev">GitHub</a>
                         </p>
                     </div>
                 </div>
