Major update, added main page (Drk.dev), 1 subpage (Projects) linking to projects and file organization. Detail: Added "Or get back to Drk.dev" anchor on Wise.Bank project page

--- a/index.html
+++ b/index.html
@@ -3,80 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wise Bank</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Drk.dev</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div id="content">
-        <div id="pagetitle">
-            <a href=""><h1>Wise.Bank</h1></a>
-            <p>All your currencies, in one place.</p>
+    <div id="headerbox">
+        <header>
+            <div id="headertitle">
+                <a href="index.html"><h1>Drk.dev</h1></a>
+            </div>
+            <div id="headernav">
+                <div id="headernavigation-home" class="headernavopt"><a href="index.html">Home</a></div>
+                <div id="headernavigation-projects" class="headernavopt"><a href="projects.html">Projects</a></div>
+                <div id="headernavigation-about" class="headernavopt"><a href="about.html">About</a></div>
+                <div id="headernavigation-committous" class="headernavopt"><a href="committo.html">Commit to us!</a></div>
+            </div>
+        </header>
+    </div>
+    <div id="bodycontent">
+        <div id="contenttitle" class="contentonbody">
+            <h2>Hello and welcome to my development page!</h3>
+            <p>
+                So you porbaly have come here to see some shitty code didn't you?<br>
+                Well that's no problem, <a href="projects.html">here</a> you can check out my curent active projects
+            </p>
         </div>
-        <div id="loginbox">
-            <div id="clientinfo">
-                <h3>Login</h3>
-                <input class="infobox" id="usernameinfobox" type="text" placeholder="Username or E-Mail"><br>
-                <input class="infobox" id="passwordinfobox" type="password" placeholder="Password">
-                <button type="submit">Login</button>
-            </div>
-            <div id="optandpaswdreset">
-                <label><input type="checkbox">Remember-me</label>
-                <a href="">Forgot password?</a>
-            </div>
-            <div id="extra">
-                <p id="noacc">Don't have an account? <a href="">Register</a></p>
-            </div>
+        <div id="content1" class="contentonbody">
+            <h3>By the way, feel free to colaborate.</h2>
+            <p>
+                You can contribute to my page by suggesting ideas of projects,<br>
+                features or any other thing that may involve this page through <a href="committo.html">Commit</a>.<br>
+                Yes you can also develop your own COOL AND AWSOME PROJECT then just open a push request for me to review it, or just talk to me on my Discord. 
+            </p>
         </div>
-            <footer>
-                <div id="footerinfo">
-                    <div id="brand">
-                        <a href=""><h4>Wise.Bank</h4></a>
-                        <p>
-                            A bank, for all you needs.<br>
-                            &copy 2024
-                        </p>
-                    </div>
-                    <div id="legalinfo" class="footercontainer">
-                        <h5>Legal Info:</h5>
-                        <p>
-                            <a href="">Terms</a><br>
-                            <a href="">Politics</a><br>
-                            <a href="">Impressum</a>
-                        </p>
-                    </div>
-                    <div id="socials" class="footercontainer">
-                        <h5>Our Socials:</h5>
-                        <p>
-                            <a href="">Instagram</a><br>
-                            <a href="">Facebook</a><br>
-                            <a href="">Twitter</a>
-                        </p>
-                    </div>
-                    <div id="charts" class="footercontainer">
-                        <h5>Charts:</h5>
-                        <p>
-                            <a href="">Crypto</a><br>
-                            <a href="">Stocks</a><br>
-                            <a href="">Commodities</a>
-                        </p>
-                    </div>
-                    <div id="us" class="footercontainer">
-                        <h5>Who are we?</h5>
-                        <p>
-                            <a href="">About</a><br>
-                            <a href="">Contact us</a><br>
-                            <a href="">Jobs</a>
-                        </p>
-                    </div>
-                    <div id="dev" class="footercontainer">
-                        <h5>Developer:</h5>
-                        <p>
-                            Page developed by <a href="https://github.com/dark1zinn" target="_blank">dark1zinn</a><br>
-                            See it on <a href="https://github.com/dark1zinn/drkdev">GitHub</a>
-                        </p>
-                    </div>
-                </div>
-            </footer>
     </div>
 </body>
 </html>
