Attempt to hotfix the directory pathfind issue

--- a/projects/noproject.html
+++ b/projects/noproject.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Error, there is an actual project here?</h1>
-    <p>There ain't, if you think this is a bug, <a href="/about.html">contact-me</a>.</p>
+    <p>
+        There ain't, if you think this is a bug, <a href="../about.html">contact-me</a>.<br>
+        Or return to the <a href="../projects.html">Projects</a> page.
+    </p>
 </body>
 </html>
