--- a/projects/wisebank/index.html
+++ b/projects/wisebank/index.html
@@ -72,8 +72,8 @@
                         <h5>Developer:</h5>
                         <p>
                             Page developed by <a href="https://github.com/dark1zinn" target="_blank">dark1zinn</a><br>
-                            See it on <a href="https://github.com/dark1zinn/drkdev">GitHub</a><br>
-                            Or get back to <a href="/projects.html">Drk.dev</a>
+                            See it on <a href="https://github.com/dark1zinn/drkdev" target="_blank">GitHub</a><br>
+                            Or get back to <a href="../../projects.html">Drk.dev</a>
                         </p>
                     </div>
                 </div>
