Final attempt to hotfix the pathfind issue

--- a/about.html
+++ b/about.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>In development!!</h1>
-    <h3>Go back to the <a href="/index.html">Home</a> page!</h3>
+    <h3>Go back to the <a href="index.html">Home</a> page!</h3>
 </body>
 </html>
