Renamed project ps2screen to smoothscreen, + hotfix for committo page on file pathfinding issue

--- a/projects/smoothscreen/index.html
+++ b/projects/smoothscreen/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Drk.dev - CommitTo</title>
+    <title>PS2 Screen</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>In development!!</h1>
-    <h3>Go back to the <a href="index.html">Home</a> page!</h3>
+    
 </body>
 </html>
