Changes on header design, changed HomePage an About content. + HotFix on directory/file pathfinding.

--- a/projects.html
+++ b/projects.html
@@ -9,14 +9,12 @@
 <body>
     <div id="headerbox">
         <header>
-            <div id="headertitle">
+            <div id="headertitle" class="headernavopt">
                 <a href="index.html"><h1>Drk.dev</h1></a>
             </div>
             <div id="headernav">
-                <div id="headernavigation-home" class="headernavopt"><a href="index.html">Home</a></div>
-                <div id="headernavigation-projects" class="headernavopt"><a href="projects/projects.html">Projects</a></div>
-                <div id="headernavigation-about" class="headernavopt"><a href="about/about.html">About</a></div>
-                <div id="headernavigation-committous" class="headernavopt"><a href="committo/committo.html">Commit to us!</a></div>
+                <div id="headernavigation-projects" class="headernavopt"><a href="">Projects</a></div>
+                <div id="headernavigation-about" class="headernavopt"><a href="about.html">About</a></div>
             </div>
         </header>
     </div>
