Updated href for the new project on Projects page

--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
         <h2>Projects</h2>
         <div id="projectscontainer">
             <div id="box1" class="projectbox">
-                <a href="projects/wisebank/index.html">
+                <a href="projects/wisebank/index.html" target="_blank">
                         <div class="projectboxprofile">
                         <span class="projectboxtitle">Wise.Bank</span>
                         <div class="projectboximg">
@@ -30,21 +30,21 @@
                         </div>
                     </div>
                     <div class="projectboxdescription">
-                        <p>A fictional bank login page.</p>
+                        <p>A fictional bank login page, mainly focused on testing HTML and CSS skills.</p>
                     </div>
                 </a>
                 
             </div>
             <div id="box2" class="projectbox">
-                <a href="projects/noproject.html">
+                <a href="projects/simplelogin/index.html" target="_blank">
                     <div class="projectboxprofile">
-                        <span class="projectboxtitle">Id2</span>
+                        <span class="projectboxtitle">SimpleLogin</span>
                         <div class="projectboximg">
                             <img src="https://cdn-icons-png.freepik.com/256/5956/5956592.png?semt=ais_hybrid" alt="">
                         </div>
                     </div>
                     <div class="projectboxdescription">
-                        <p>demonstration</p>
+                        <p>A semi-functional login page, main goal is the JavaScript,<br> so i tried to make it work the better possible.</p>
                     </div>
                 </a>
             </div>
