Added new project "FrameSwap", testing new header css behavior on main index.html, reset on "SmoothScreen" files

--- a/projects.html
+++ b/projects.html
@@ -49,15 +49,15 @@
                 </a>
             </div>
             <div id="box3" class="projectbox">
-                <a href="projects/noproject.html">
+                <a href="projects/frameswap/index.html" target="_blank">
                     <div class="projectboxprofile">
-                        <span class="projectboxtitle">Id3</span>
+                        <span class="projectboxtitle">FrameSwap</span>
                         <div class="projectboximg">
                             <img src="https://cdn-icons-png.freepik.com/256/5956/5956592.png?semt=ais_hybrid" alt="">
                         </div>
                     </div>
                     <div class="projectboxdescription">
-                        <p>demonstration</p>
+                        <p>Just a test for multiple informations within the same space without<br> conflicting with each other.</p>
                     </div>
                 </a>
             </div>
