--- a/projects/smoothscreen/index.html
+++ b/projects/smoothscreen/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PS2 Screen</title>
-    <link rel="stylesheet" href="style.css">
+    <title>SmoothScreen</title>
 </head>
 <body>
-    
+    <div>
+        HEY
+    </div>
 </body>
 </html>
