Hotfix (corrected a typo, added header css behavior on about and projects, small overflow on home) + updated README.md

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div id="content-2" class="contentbody">
             <h3>Who am I?</h3><img src="https://github.com/dark1zinn.png" alt="avatar" width="130px">
             <p>
-                My username is <strong><a href="https://github.com/dark1zinn" target="_blank">dark1zinn</a></strong>, i use it pretty much everywhere, on the games i from the games i play to all my accounts accross the web, why this choice?<br>
+                My username is <strong><a href="https://github.com/dark1zinn" target="_blank">dark1zinn</a></strong>, i use it pretty much everywhere, from the games i play to all my accounts accross the web, why this choice?<br>
                 Well, it was a long time ago when i was 12 or 13 years old, i think this "cool username" thing happened to a lot of people that time.<br>
                 I started using this username everywhere and now to change it would be so much effort to do, then i decided to just adopt this username, and yes, i do like it.<br>
                 <br>
